[metadata]
name = keras2c
version = 0.0.1
description = Library for deploying keras neural networks in C99, using only standard libraries. It is designed to be as simple as possible for real time applications.
long_description = file: README.md

[options]
include_package_data = True
packages = find:
install_requires =
    tensorflow
    numpy

[options.entry_points]
console_scripts =
    keras2c = keras2c.__main__:main